fix overflow style of item in folded SideNav

--- a/browser/main/SideNav/FolderItem.styl
+++ b/browser/main/SideNav/FolderItem.styl
@@ -70,7 +70,7 @@
 
 .root--folded
   @extend .root
-  width 44px
+  width 44px - 1
   &:hover .label-name
     width 100px
   .label
@@ -78,7 +78,7 @@
     text-align center
     right 0
   .label-icon
-    width 44px
+    width 44px - 1
   .label-name
     position fixed
     height 34px
