--- a/browser/main/SideNav/SideNav.styl
+++ b/browser/main/SideNav/SideNav.styl
@@ -75,7 +75,7 @@
     white-space nowrap
     transform rotate(90deg)
   .top-menu
-    width 44px
+    width 44px - 1
     text-align center
     &:hover .top-menu-label
       width 100px
@@ -97,7 +97,7 @@
     transition width 0.15s
     pointer-events none
   .menu-button, .menu-button--active
-    width 44px
+    width 44px - 1
     text-align center
     &:hover .menu-button-label
       width 100px
